[workspace]
members = ["packages/*"]
exclude = ["contracts"]

resolver = "2"

[workspace.package]
version = "3.0.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cosmwasm"

[workspace.dependencies]
cosmwasm-core = { version = "3.0.4" }
cosmwasm-crypto = { version = "3.0.4" }
cosmwasm-derive = { version = "3.0.4" }
cosmwasm-schema = { version = "3.0.4" }
cosmwasm-schema-derive = { version = "3.0.4" }
cosmwasm-std = { version = "3.0.4", default-features = false }
cosmwasm-vm = { version = "3.0.4" }
cosmwasm-vm-derive = { version = "3.0.4" }
cw-schema = { version = "3.0.4" }
cw-schema-derive = { version = "3.0.4" }
cosmwasm-check = { version = "3.0.4" }
schemars = "0.8.4"
serde = { version = "1.0.192", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0.140"
thiserror = "1.0.26"
