[workspace]
members = ["packages/*"]
exclude = ["contracts"]

resolver = "2"

[workspace.package]
version = "2.2.8"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cosmwasm"

[workspace.dependencies]
cosmwasm-core = { version = "=2.2.8" }
cosmwasm-schema-derive = { version = "=2.2.8" }
cosmwasm-schema = { version = "=2.2.8" }
cosmwasm-vm-derive = { version = "=2.2.8" }
cosmwasm-derive = { version = "=2.2.8" }
cosmwasm-crypto = { version = "=2.2.8" }
cosmwasm-std = { version = "=2.2.8", default-features = false }
cosmwasm-vm = { version = "=2.2.8" }
cosmwasm-check = { version = "=2.2.8" }
schemars = "0.8.4"
serde = { version = "1.0.192", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0.140"
thiserror = "1.0.26"
