[workspace]
members = [
    "burner",
    "crypto-verify",
    "cyberpunk",
    "empty",
    "floaty",
    "hackatom",
    "ibc2",
    "ibc-callbacks",
    "ibc-reflect",
    "ibc-reflect-send",
    "nested-contracts",
    "queue",
    "reflect",
    "replier",
    "staking",
    "virus",
]

resolver = "2"

[workspace.package]
version = "3.0.1"

[workspace.dependencies]
schemars = "0.8.4"
serde = { version = "1.0.192", default-features = false, features = ["alloc", "derive"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
