[package]
name = "burner"
version = "0.0.0"
authors = [
    "Ethan Frey <ethanfrey@users.noreply.github.com>",
    "Simon Warta <webmaster128@users.noreply.github.com>",
]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = { version = "3.0.3" }
cosmwasm-std = { version = "3.0.3", features = ["cosmwasm_1_4", "iterator"] }
schemars = "0.8.12"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-vm = { version = "3.0.3", default-features = false, features = ["iterator"] }
