[package]
name = "crypto-verify"
version = "0.0.0"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
base64 = "0.22.0"
cosmwasm-schema = { path = "../../packages/schema" }
cosmwasm-std = { path = "../../packages/std", features = [
    "cosmwasm_2_1",
    "iterator",
] }
hex = "0.4"
p256 = { version = "0.13.2", default-features = false, features = [
    "alloc",
    "ecdsa",
] }
rlp = "0.5"
schemars = "0.8.12"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"

[dev-dependencies]
cosmwasm-vm = { path = "../../packages/vm", default-features = false, features = [
    "iterator",
] }
hex-literal = "0.4.1"
