[package]
name = "crypto-verify"
version = "0.0.0"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
base64 = "0.22.0"
cosmwasm-schema = { version = "=2.2.6" }
cosmwasm-std = { version = "=2.2.6", features = ["cosmwasm_2_1", "iterator"] }
hex = "0.4"
p256 = { version = "0.13.2", default-features = false, features = ["alloc", "ecdsa"] }
rlp = "0.5"
schemars = "0.8.12"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
base64ct = "=1.7.3" # This is only for fixing the Edition 2021 of base64ct crate.

[dev-dependencies]
cosmwasm-vm = { version = "=2.2.6", default-features = false, features = ["iterator"] }
backtrace = "=0.3.74" # This fixes the last version that compiles with 1.81.0
hex-literal = "0.4.1"
