[package]
name = "cyberpunk"
version = "0.0.0"
authors = ["Tomasz Kurcz <uint@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = { version = "=2.2.3" }
cosmwasm-std = { version = "=2.2.3", default-features = false, features = ["cosmwasm_1_3", "std"] }
rust-argon2 = "2.1"
thiserror = "1.0.26"

[dev-dependencies]
cosmwasm-vm = { version = "=2.2.3", default-features = false }
backtrace = "=0.3.74" # This fixes the last version that compiles with 1.81.0
tempfile = "3.1.0"
