[package]
name = "empty"
version = "0.0.0"
authors = ["Christoph Otter <chris@confio.gmbh>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = { version = "=2.3.1" }
cosmwasm-std = { version = "=2.3.1", features = ["iterator"] }
schemars = "0.8.12"

[dev-dependencies]
cosmwasm-vm = { version = "=2.3.1", default-features = false, features = ["iterator"] }
