[package]
name = "floaty"
version = "0.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = { path = "../../packages/schema" }
cosmwasm-std = { path = "../../packages/std" }
schemars = "0.8.12"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
rand_chacha = { version = "0.3.1", default-features = false }

[dev-dependencies]
cosmwasm-vm = { path = "../../packages/vm", default-features = false, features = [
    "iterator",
] }
