[package]
name = "hackatom"
version = "0.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { path = "../../packages/schema" }
cosmwasm-std = { path = "../../packages/std", default-features = false, features = ["cosmwasm_2_2", "exports", "std"] }
schemars = "0.8.12"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0.26"

[dev-dependencies]
cosmwasm-vm = { path = "../../packages/vm", default-features = false }
