[package]
name = "ibc-callbacks"
version = "0.0.0"
authors = ["Christoph Otter <chris@confio.gmbh>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = { path = "../../packages/schema" }
cosmwasm-std = { path = "../../packages/std", features = [
    "iterator",
    "stargate",
] }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-vm = { path = "../../packages/vm", default-features = false, features = [
    "iterator",
    "stargate",
] }
