[package]
name = "ibc-reflect"
version = "0.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = { version = "=2.2.6" }
cosmwasm-std = { version = "=2.2.6", features = ["cosmwasm_2_2", "iterator", "stargate"] }
schemars = "0.8.12"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-vm = { version = "=2.2.6", default-features = false, features = ["iterator", "stargate"] }
backtrace = "=0.3.74" # This fixes the last version that compiles with 1.81.0
