[package]
name = "replier"
version = "0.0.0"
authors = ["Tomasz Kulik <tomek.k@confio.gmbh>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { path = "../../packages/schema" }
cosmwasm-std = { path = "../../packages/std", default-features = false, features = ["cosmwasm_1_4", "exports", "iterator", "std"] }
schemars = "0.8.12"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
