[package]
name = "cosmwasm-vm"
version = "0.3.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "VM bindings to run cosmwams contracts"
repository = "https://github.com/confio/cosmwasm/tree/master/lib/vm"
license = "Apache-2.0"

[badges]
circle-ci = { repository = "confio/cosmwasm", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
cosmwasm = { path = "../..", version = "0.3.0" }
wasmer-runtime = { git = "https://github.com/confio/wasmer.git", branch = "target-fix"}
wasmer-runtime-core = { git = "https://github.com/confio/wasmer.git", branch = "target-fix"}
wasmer-clif-backend = { git = "https://github.com/confio/wasmer.git", branch = "target-fix"}
failure = "0.1.5"
sha2 = "0.8.0"
hex = "0.3.1"
memmap = "0.7"
lru = "0.3.1"

[dev-dependencies]
tempfile = "3.1.0"
wabt = "0.9.1"

[features]
# allow us to force the target assembly
"force-linux-x86-64" = ["wasmer-runtime-core/force-linux-x86-64"]
"force-osx-x86-64" = ["wasmer-runtime-core/force-osx-x86-64"]
"force-no-asm" = ["wasmer-runtime-core/force-no-asm"]
