[package]
name = "cosmwasm-vm"
version = "0.3.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "VM bindings to run cosmwams contracts"
repository = "https://github.com/confio/cosmwasm/tree/master/lib/vm"
license = "Apache-2.0"

[badges]
circle-ci = { repository = "confio/cosmwasm", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
# select which backends are enabled (multiple possible)
# default selects which is re-exported in backends/mod.rs (only one possible)
default = ["singlepass", "default-singlepass"]
cranelift = ["wasmer-clif-backend"]
singlepass = ["wasmer-singlepass-backend"]
default-cranelift = []
default-singlepass = []

[dependencies]
cosmwasm = { path = "../..", version = "0.3.0" }
wasmer-runtime = "0.8.0"
wasmer-runtime-core = "0.8.0"
wasmer-middleware-common = "0.8.0"
wasmer-clif-backend = {version = "0.8.0", optional = true }
wasmer-singlepass-backend = {version = "0.8.0", optional = true }
failure = "0.1.5"
sha2 = "0.8.0"
hex = "0.3.1"
memmap = "0.7"
lru = "0.3.1"

[dev-dependencies]
tempfile = "3.1.0"
wabt = "0.9.1"
